<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cube master</string>
    <string name="hello_world">Hello world!</string>

    <drawable name="icon">#333333</drawable>

    <string name="front">FRONT</string>
    <string name="side_back">BACK</string>
    <string name="left">LEFT</string>
    <string name="right">RIGHT</string>
    <string name="up">UP</string>
    <string name="down">DOWN</string>

    <string name="email">firzen.developer@gmail.com</string>

    <string name="message">Message</string>
    <string name="ok">OK</string>
    <string name="warning">Warning</string>
    <string name="question">Question</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="revert_changes">Revert changes</string>
    <string name="repair">Repair</string>
    <string name="confirm">Confirm</string>

    <!-- Solution activity -->
    <string name="next_move">Next move</string>
    <string name="previous_move">Previous move</string>
    <string name="load_this_side">Load</string>
    <string name="show_solution_now">Solve!</string>
    <string name="please_load_cube">Please paint your cube by hand or using the camera.</string>

    <!-- Activity titles -->
    <string name="title_activity_preview">PreviewActivity</string>
    <string name="title_activity_main_activity">MainActivity</string>
    <string name="title_activity_detect">DetectActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_cube">Cube master - Cube solving</string>
    <string name="title_activity_solution">Cube master - Learn how to solve</string>
    <string name="title_activity_help">HelpActivity</string>

    <!-- Main menu -->
    <string name="solve_cube">Solve cube</string>
    <string name="show_solution">Show solution</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>

    <!-- Cube size selection -->
    <string name="select_size">Select cube size</string>
    <string name="size_2x2x2">Size 2x2x2</string>
    <string name="size_3x3x3">Size 3x3x3</string>

    <!-- Cube loading type selection -->
    <string name="choose_load_type">Select type of edit</string>
    <string name="load_by_hand">Paint by hand</string>
    <string name="load_by_camera">Load using camera</string>
    <string name="load_randomly">Scramble cube</string>

    <!-- Flip selection -->
    <string name="choose_flip_type">Choose flip type</string>
    <string name="flip_horizontal">Flip horizontal</string>
    <string name="flip_vertical">Flip vertical</string>

    <!-- Detect activity -->
    <string name="show_preview">OK</string>
    <string name="photo">Detect</string>
    <string name="detect_hint">Place side of the cube into highlighted area and press Detect.</string>
    <string name="logo_alt">Rubik\'s cube MASTER app logo.</string>
    <string name="white_balance">White balance</string>
    <string name="wb_auto">Auto</string>
    <string name="wb_tungsten">Incandescent</string>
    <string name="wb_fluorescent">Fluorescent</string>
    <string name="wb_daylight">Daylight</string>
    <string name="wb_cloudy">Cloudy</string>
    <string name="suggest_white_balance">Problems with detection? Try to adjust white balance by pressing \"Settings\" button.</string>

    <!-- Cube activity -->
    <string name="rotate_side">Rotate</string>
    <string name="load_side">Photo</string>
    <string name="game_mode">Play mode</string>
    <string name="back">Back</string>
    <string name="forward">Next</string>
    <string name="edit_cube">Edit</string>
    <string name="play_cube">Play</string>
    <string name="edit_colors">Select colour → </string>
    <string name="stop_colors_editing">Finish painting</string>
    <string name="layer_help">Guide</string>
    <string name="reset_cube">Reset cube</string>
    <string name="cant_reset_cube_while_solving">The cube cannot be reset during solving</string>
    <string name="cant_scramble_while_solving">The cube cannot be scrambled during solving</string>
    <string name="checking_cube">Checking cube</string>
    <string name="checking_cube_validity">Checking cube validity ...</string>
    <string name="solving_cube">Solving cube</string>
    <string name="computation_in_progress">Computation in progress ...</string>
    <string name="show_moves_to_solution">Display solution by pressing Next and Back.</string>
    <string name="cube_is_solved">Your cube is solved!</string>
    <string name="no_instructions_so_far">There is no instructions so far, press Next to show them.</string>
    <string name="step">Step</string>
    <string name="check_highlighted_fields">Please check highlighted fields</string>
    <string name="invalid_counts_of_colours">Counts of coloured fields must remain the same, please check</string>
    <string name="invalid_cube">It is impossible to solve this cube. Please fix cube configuration or load previous state.</string>
    <string name="return_to_main_menu">Current state of the cube will be lost after getting back to the main menu. Do you want to continue?</string>

    <!-- Settings activity -->
    <string name="erase_settings">This action will erase all customized settings.</string>
    <string name="erase_settings_proceed">Do you really want to reset default values?</string>
    <string name="settings_reset_done">Settings has been reset.</string>

    <!-- Colors activity -->
    <string name="title_activity_colors">Edit cube colours</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <!-- Errors -->
    <string name="error_init_cube">An error occured during cube initialization!</string>
    <string name="error_cant_move">Couldn\'t perform a move!</string>
    <string name="error_general">Error!</string>
    <string name="error_flip">An error occured during flipping the side!</string>
    <string name="error_rotate">An error occured during rotating the side!</string>
    <string name="settings_bg_color_dialog">Choose colour</string>
    <string name="settings_default_color_confirm">Original</string>
    <string name="settings_bg_color_confirm">New</string>
    <string name="title_activity_solving_help">SolvingHelpActivity</string>
    <string name="title_activity_usage_tips">UsageTipsActivity</string>
    <string name="title_activity_cheatsheet">CheatsheetActivity</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_error">ErrorActivity</string>

</resources>
