<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_colors"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:layout_gravity="fill_horizontal" >

            <LinearLayout
                android:id="@+id/colors_front"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:text="@string/front"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </LinearLayout>

           <LinearLayout
               android:id="@+id/colors_back"
               android:layout_width="fill_parent"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:gravity="center" >

               <TextView
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:textColor="#000000"
                   android:text="@string/side_back"
                   android:gravity="center"
                   android:textAppearance="?android:attr/textAppearanceLarge" />

            </LinearLayout>
            
    </LinearLayout>

   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:layout_gravity="fill_horizontal" >

            <LinearLayout
                android:id="@+id/colors_left"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="@string/left"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </LinearLayout>

           <LinearLayout
               android:id="@+id/colors_right"
               android:layout_width="fill_parent"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:gravity="center" >

               <TextView
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:textColor="#000000"
                   android:text="@string/right"
                   android:gravity="center"
                   android:textAppearance="?android:attr/textAppearanceLarge" />

            </LinearLayout>
            
    </LinearLayout>
    
       <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:layout_gravity="fill_horizontal" >

            <LinearLayout
                android:id="@+id/colors_up"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="@string/up"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </LinearLayout>

           <LinearLayout
               android:id="@+id/colors_down"
               android:layout_width="fill_parent"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:gravity="center" >

               <TextView
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:textColor="#000000"
                   android:text="@string/down"
                   android:gravity="center"
                   android:textAppearance="?android:attr/textAppearanceLarge" />

            </LinearLayout>
            
    </LinearLayout>
       <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="fill_horizontal" >

           <Button
               android:id="@+id/colors_cancel"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/cancel" />

           <Button
               android:id="@+id/colors_save"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/save" />
            
    </LinearLayout>

</LinearLayout>